fixed small issue with projects overflowing on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -276,7 +276,7 @@ p {
     }
 
     .project {
-        width: 100%;
+        width: calc(100% - 2rem);
     }
 
     #main-project {
